assets/fixes/pod-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-3-2-1b-decode-pod-1
  namespace: llm-d
  labels:
    llmd.ai/gather-metrics: "true"
spec:
  selector:
    llm-d.ai/role: decode
    llm-d.ai/model: llama-3-2-1b
  ports:
  - name: vllm-proxy
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: vllm
    port: 8001
    protocol: TCP
    targetPort: 8001
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
---
apiVersion: v1
kind: Service
metadata:
  name: llama-3-2-1b-decode-pod-2
  namespace: llm-d
  labels:
    llmd.ai/gather-metrics: "true"
spec:
  selector:
    llm-d.ai/role: decode
    llm-d.ai/model: llama-3-2-1b
  ports:
  - name: vllm-proxy
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: vllm
    port: 8001
    protocol: TCP
    targetPort: 8001
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
---
apiVersion: v1
kind: Service
metadata:
  name: llama-3-2-1b-decode-pod-3
  namespace: llm-d
  labels:
    llmd.ai/gather-metrics: "true"
spec:
  selector:
    llm-d.ai/role: decode
    llm-d.ai/model: llama-3-2-1b
  ports:
  - name: vllm-proxy
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: vllm
    port: 8001
    protocol: TCP
    targetPort: 8001
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
